fixed overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
 *{
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   overflow-y: hidden;
 }
 
@@ -73,12 +72,83 @@ p{
   font-size: 0.8rem;
 }
 
+.projects-list::-webkit-scrollbar {
+  display: none;
+}
+
+.projects-list{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  justify-content: center;
+  padding-top: 30px;
+  width: 100%;
+  height: 95%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, calc(100vw - 85vw));
+  column-gap: 10px;
+  row-gap: 10px;
+  overflow-y: scroll;
+}
+
+.project{
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  width: calc(100vw - 85vw);
+  height: calc(100vw - 85vw);
+  text-align: center;
+  background-color: rgba(158, 158, 158, 0.253);
+  border-radius: 10px;
+  z-index: 1;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: 'Roboto Mono', sans-serif;
+  color: white;
+}
+
+.project:hover{
+  transition: 1s;
+
+  background-color: #70c2b2;
+
+}
+
+.project p {
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: 'Roboto Mono', sans-serif;
+  color: white;
+}
+
+
+.socials{
+  display: flex;
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+  transition: 0.5s;
+}
+
+.desc{
+  display: none;
+}
+
+.project:hover{
+  color: #60e7cc;
+}
+
+
+
+.project:hover .desc{
+  display: block;
+}
 
 @media only screen and (max-width: 800px) {
 
   *{
-    overflow-y: unset !important;
-    overflow-x: hidden;
+    overflow-y: unset;
   }
   .container{
     overflow-y: initial;
@@ -87,6 +157,8 @@ p{
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 50% 50%;
+    width: 100vw;
+    height: 100vh;
     background: linear-gradient(0deg, #ffffff 60%, #60e7cc86 100%);
     -webkit-animation: AnimationName 22s ease infinite;
     -moz-animation: AnimationName 22s ease infinite;
@@ -95,6 +167,27 @@ p{
 
   .container h1 {
     margin: 0%;
+  }
+
+  .projects-list{
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, calc(100vw - 60vw));
+    scrollbar-width: none;  /* Firefox */
+    grid-row-start: 2;
+    column-gap: 10px;
+    row-gap: 10px;
+    overflow-y: visible;
+    padding-bottom: 30%;
+  }
+
+  .project{
+    width: calc(100vw - 60vw);
+    height: calc(100vw - 60vw);
+    background-color: rgba(128, 128, 128, 0.253);
+    z-index: 1;
   }
 
   .introduction{
@@ -109,9 +202,8 @@ p{
 
 
 
-@media only screen and (max-width: 800px) {
-
-  h1 { 
-    font-size: 1.5em; 
+@media only screen and (max-width: 375px) {
+  h1{
+    font-size: 1.5rem;
   }
 }
